<resources>
    <string name="app_name">AMIGGOS</string>
    <string name="get_started">GET STARTED</string>
    <string name="traveling_party">Traveling Party</string>
    <string name="hottest">Hottest Venues</string>

    <string name="traveling_party_desc">Amiggos was created for the traveling party soul that needs to know where the party is at while making new friends</string>
    <string name="hottest_des">Search for the hottest venues never feel lost or alone while traveling to different destinations</string>
    <string name="dont_post_on_social">We don\'t post anything to social media</string>
    <string name="facebook">facebook</string>
    <string name="instagram">Instagram</string>
    <string name="google">Google</string>
    <string name="login_by">Login by using social media</string>

    <string name="english">English (us)</string>
    <string name="spanish">Spanish</string>
    <string name="select_language">Select Language</string>
    <string name="select">Select</string>
    <string-array name="walkthrough_titles">
        <item>@string/traveling_party</item>
        <item>@string/hottest</item>
    </string-array>
    <string-array name="walkthrough_desc">
        <item>@string/traveling_party_desc</item>
        <item>@string/hottest_des</item>
    </string-array>

    <string-array name="languages">
        <item>@string/english</item>
        <item>@string/spanish</item>
    </string-array>
</resources>
